--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
-    <title>HW2</title>
+    <title>HW4</title>
 </head>
 <body class="body">
     <header class="header">
@@ -44,7 +44,7 @@
                 <ul class="advantages-list">
                     <li class="advantages-item">
                         <div class="advantages-icon-cont">
-                            <svg class="advantages-icon" width="64px" height="64px">
+                            <svg class="advantages-icon" width="64" height="64">
                                 <use href="./images/icons.svg#icon-antenna"></use>
                             </svg>
                         </div>
@@ -53,7 +53,7 @@
                     </li>
                     <li class="advantages-item">
                         <div class="advantages-icon-cont">
-                            <svg class="advantages-icon" width="64px" height="64px">
+                            <svg class="advantages-icon" width="64" height="64">
                                 <use href="./images/icons.svg#icon-clock"></use>
                             </svg>
                         </div>
@@ -62,7 +62,7 @@
                     </li>
                     <li class="advantages-item">
                         <div class="advantages-icon-cont">
-                            <svg class="advantages-icon" width="64px" height="64px">
+                            <svg class="advantages-icon" width="64" height="64">
                                 <use href="./images/icons.svg#icon-diagram"></use>
                             </svg>
                         </div>
@@ -71,7 +71,7 @@
                     </li>
                     <li class="advantages-item">
                         <div class="advantages-icon-cont">
-                            <svg class="advantages-icon" width="64px" height="64px">
+                            <svg class="advantages-icon" width="64" height="64">
                                 <use href="./images/icons.svg#icon-astronaut"></use>
                             </svg>
                         </div>
@@ -93,28 +93,28 @@
                                 <ul class="team-socials-list">
                                     <li class="team-socials-item">
                                         <a href="" class="team-socials-link">
-                                            <svg class="team-socials-icon" width="16px" height="16px">
+                                            <svg class="team-socials-icon" width="16" height="16">
                                                 <use href="./images/icons.svg#icon-instagram"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="team-socials-item">
                                         <a href="" class="team-socials-link">
-                                            <svg class="team-socials-icon" width="16px" height="16px">
+                                            <svg class="team-socials-icon" width="16" height="16">
                                                 <use href="./images/icons.svg#icon-twitter"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="team-socials-item">
                                         <a href="" class="team-socials-link">
-                                            <svg class="team-socials-icon" width="16px" height="16px">
+                                            <svg class="team-socials-icon" width="16" height="16">
                                                 <use href="./images/icons.svg#icon-facebook"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="team-socials-item">
                                         <a href="" class="team-socials-link">
-                                            <svg class="team-socials-icon" width="16px" height="16px">
+                                            <svg class="team-socials-icon" width="16" height="16">
                                                 <use href="./images/icons.svg#icon-linkedin"></use>
                                             </svg>
                                         </a>
@@ -127,31 +127,31 @@
                         <div class="ourteam-teamtextbox">
                             <h3 class="list-title">Tom Ford</h3>
                             <p class="list-text">Frontend Developer</p>
-                                                            <ul class="team-socials-list">
+                                <ul class="team-socials-list">
                                     <li class="team-socials-item">
                                         <a href="" class="team-socials-link">
-                                            <svg class="team-socials-icon" width="16px" height="16px">
+                                            <svg class="team-socials-icon" width="16" height="16">
                                                 <use href="./images/icons.svg#icon-instagram"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="team-socials-item">
                                         <a href="" class="team-socials-link">
-                                            <svg class="team-socials-icon" width="16px" height="16px">
+                                            <svg class="team-socials-icon" width="16" height="16">
                                                 <use href="./images/icons.svg#icon-twitter"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="team-socials-item">
                                         <a href="" class="team-socials-link">
-                                            <svg class="team-socials-icon" width="16px" height="16px">
+                                            <svg class="team-socials-icon" width="16" height="16">
                                                 <use href="./images/icons.svg#icon-facebook"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="team-socials-item">
                                         <a href="" class="team-socials-link">
-                                            <svg class="team-socials-icon" width="16px" height="16px">
+                                            <svg class="team-socials-icon" width="16" height="16">
                                                 <use href="./images/icons.svg#icon-linkedin"></use>
                                             </svg>
                                         </a>
@@ -164,31 +164,31 @@
                         <div class="ourteam-teamtextbox">
                             <h3 class="list-title">Camila Garcia</h3>
                             <p class="list-text">Marketing</p>
-                                                            <ul class="team-socials-list">
+                                <ul class="team-socials-list">
                                     <li class="team-socials-item">
                                         <a href="" class="team-socials-link">
-                                            <svg class="team-socials-icon" width="16px" height="16px">
+                                            <svg class="team-socials-icon" width="16" height="16">
                                                 <use href="./images/icons.svg#icon-instagram"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="team-socials-item">
                                         <a href="" class="team-socials-link">
-                                            <svg class="team-socials-icon" width="16px" height="16px">
+                                            <svg class="team-socials-icon" width="16" height="16">
                                                 <use href="./images/icons.svg#icon-twitter"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="team-socials-item">
                                         <a href="" class="team-socials-link">
-                                            <svg class="team-socials-icon" width="16px" height="16px">
+                                            <svg class="team-socials-icon" width="16" height="16">
                                                 <use href="./images/icons.svg#icon-facebook"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="team-socials-item">
                                         <a href="" class="team-socials-link">
-                                            <svg class="team-socials-icon" width="16px" height="16px">
+                                            <svg class="team-socials-icon" width="16" height="16">
                                                 <use href="./images/icons.svg#icon-linkedin"></use>
                                             </svg>
                                         </a>
@@ -201,31 +201,31 @@
                         <div class="ourteam-teamtextbox">
                             <h3 class="list-title">Daniel Wilson</h3>
                             <p class="list-text">UI Designer</p>
-                                                            <ul class="team-socials-list">
+                                <ul class="team-socials-list">
                                     <li class="team-socials-item">
                                         <a href="" class="team-socials-link">
-                                            <svg class="team-socials-icon" width="16px" height="16px">
+                                            <svg class="team-socials-icon" width="16" height="16">
                                                 <use href="./images/icons.svg#icon-instagram"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="team-socials-item">
                                         <a href="" class="team-socials-link">
-                                            <svg class="team-socials-icon" width="16px" height="16px">
+                                            <svg class="team-socials-icon" width="16" height="16">
                                                 <use href="./images/icons.svg#icon-twitter"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="team-socials-item">
                                         <a href="" class="team-socials-link">
-                                            <svg class="team-socials-icon" width="16px" height="16px">
+                                            <svg class="team-socials-icon" width="16" height="16">
                                                 <use href="./images/icons.svg#icon-facebook"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="team-socials-item">
                                         <a href="" class="team-socials-link">
-                                            <svg class="team-socials-icon" width="16px" height="16px">
+                                            <svg class="team-socials-icon" width="16" height="16">
                                                 <use href="./images/icons.svg#icon-linkedin"></use>
                                             </svg>
                                         </a>
@@ -244,7 +244,7 @@
                         <div class="portfolio-wrapper">
                             <img class="portfolio-img" src="./images/our-portfolio-6.jpg" alt="Banking App" width="360">
                             <div class="portfolio-overlay">
-                                <p class="portfolio-overlay-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum excepturi iusto ex autem suscipit at libero reiciendis sit temporibus odit, soluta maiores? Voluptate quis, sit aperiam maxime beatae nobis repudiandae.</p>
+                                <p class="portfolio-overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                             </div>
                         </div>
                         <div class="portfolio-item-textblock">
@@ -268,7 +268,7 @@
                         <div class="portfolio-wrapper">
                             <img class="portfolio-img" src="./images/our-portfolio-4.jpg" alt="Meditation App" width="360">
                             <div class="portfolio-overlay">
-                                <p class="portfolio-overlay-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum excepturi iusto ex autem suscipit at libero reiciendis sit temporibus odit, soluta maiores? Voluptate quis, sit aperiam maxime beatae nobis repudiandae.</p>
+                                <p class="portfolio-overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                             </div>
                         </div>
                         <div class="portfolio-item-textblock">
@@ -280,7 +280,7 @@
                         <div class="portfolio-wrapper">
                             <img class="portfolio-img" src="./images/our-portfolio-3.jpg" alt="Taxi Service" width="360">
                             <div class="portfolio-overlay">
-                                <p class="portfolio-overlay-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum excepturi iusto ex autem suscipit at libero reiciendis sit temporibus odit, soluta maiores? Voluptate quis, sit aperiam maxime beatae nobis repudiandae.</p>
+                                <p class="portfolio-overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                             </div>
                         </div>
                         <div class="portfolio-item-textblock">
@@ -292,7 +292,7 @@
                         <div class="portfolio-wrapper">
                             <img class="portfolio-img" src="./images/our-portfolio-2.jpg" alt="Screen Illustrations" width="360">
                             <div class="portfolio-overlay">
-                                <p class="portfolio-overlay-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum excepturi iusto ex autem suscipit at libero reiciendis sit temporibus odit, soluta maiores? Voluptate quis, sit aperiam maxime beatae nobis repudiandae.</p>
+                                <p class="portfolio-overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                             </div>
                         </div>
                         <div class="portfolio-item-textblock">
@@ -304,7 +304,7 @@
                         <div class="portfolio-wrapper">
                             <img class="portfolio-img" src="./images/our-portfolio-1.jpg" alt="Online Courses" width="360">
                             <div class="portfolio-overlay">
-                                <p class="portfolio-overlay-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum excepturi iusto ex autem suscipit at libero reiciendis sit temporibus odit, soluta maiores? Voluptate quis, sit aperiam maxime beatae nobis repudiandae.</p>
+                                <p class="portfolio-overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                             </div>
                         </div>
                         <div class="portfolio-item-textblock">
@@ -328,28 +328,28 @@
                 <ul class="footer-socials-list">
                     <li class="footer-socials-item">
                         <a href="" class="footer-socials-link">
-                            <svg class="footer-socials-icon" width="24px" height="24px">
+                            <svg class="footer-socials-icon" width="24" height="24">
                                 <use href="./images/icons.svg#icon-instagram"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="footer-socials-item">
                         <a href="" class="footer-socials-link">
-                            <svg class="footer-socials-icon" width="24px" height="24px">
+                            <svg class="footer-socials-icon" width="24" height="24">
                                 <use href="./images/icons.svg#icon-twitter"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="footer-socials-item">
                         <a href="" class="footer-socials-link">
-                            <svg class="footer-socials-icon" width="24px" height="24px">
+                            <svg class="footer-socials-icon" width="24" height="24">
                                 <use href="./images/icons.svg#icon-facebook"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="footer-socials-item">
                         <a href="" class="footer-socials-link">
-                            <svg class="footer-socials-icon" width="24px" height="24px">
+                            <svg class="footer-socials-icon" width="24" height="24">
                                 <use href="./images/icons.svg#icon-linkedin"></use>
                             </svg>
                         </a>
