--- a/index.html
+++ b/index.html
@@ -253,9 +253,7 @@
                     <li class="portfolio-item">
                         <div class="portfolio-wrapper">
                             <img class="portfolio-img" src="./images/our-portfolio-5.jpg" alt="Cashless Payment" width="360">
-                            <div class="portfolio-overlay">
-                                <p class="portfolio-overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
-                            </div>
+                            <p class="portfolio-overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         </div>
                         <div class="portfolio-item-textblock">
                             <h3 class="list-title">Cashless Payment</h3>
@@ -265,9 +263,7 @@
                     <li class="portfolio-item">
                         <div class="portfolio-wrapper">
                             <img class="portfolio-img" src="./images/our-portfolio-4.jpg" alt="Meditation App" width="360">
-                            <div class="portfolio-overlay">
-                                <p class="portfolio-overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
-                            </div>
+                            <p class="portfolio-overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         </div>
                         <div class="portfolio-item-textblock">
                             <h3 class="list-title">Meditation App</h3>
@@ -277,9 +273,7 @@
                     <li class="portfolio-item">
                         <div class="portfolio-wrapper">
                             <img class="portfolio-img" src="./images/our-portfolio-3.jpg" alt="Taxi Service" width="360">
-                            <div class="portfolio-overlay">
-                                <p class="portfolio-overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
-                            </div>
+                            <p class="portfolio-overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         </div>
                         <div class="portfolio-item-textblock">
                             <h3 class="list-title">Taxi Service</h3>
@@ -289,9 +283,7 @@
                     <li class="portfolio-item">
                         <div class="portfolio-wrapper">
                             <img class="portfolio-img" src="./images/our-portfolio-2.jpg" alt="Screen Illustrations" width="360">
-                            <div class="portfolio-overlay">
-                                <p class="portfolio-overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
-                            </div>
+                            <p class="portfolio-overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit
                         </div>
                         <div class="portfolio-item-textblock">
                             <h3 class="list-title">Screen Illustrations</h3>
@@ -301,9 +293,7 @@
                     <li class="portfolio-item">
                         <div class="portfolio-wrapper">
                             <img class="portfolio-img" src="./images/our-portfolio-1.jpg" alt="Online Courses" width="360">
-                            <div class="portfolio-overlay">
-                                <p class="portfolio-overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
-                            </div>
+                            <p class="portfolio-overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         </div>
                         <div class="portfolio-item-textblock">
                             <h3 class="list-title">Online Courses</h3>
