--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
                     <li class="portfolio-item">
                         <div class="portfolio-wrapper">
                             <img class="portfolio-img" src="./images/our-portfolio-2.jpg" alt="Screen Illustrations" width="360">
-                            <p class="portfolio-overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit</p>
+                            <p class="portfolio-overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         </div>
                         <div class="portfolio-item-textblock">
                             <h3 class="list-title">Screen Illustrations</h3>
